--- a/stories/index.html
+++ b/stories/index.html
@@ -5,10 +5,11 @@
     <style type="text/css"> html{ margin: 0; height: 100%; overflow: hidden; } iframe{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } </style>
 
     <!--  Social Meta Tags -->
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Share your #SUTL story">
     <meta property="og:description" content="The City of Sacramento wants to hear about what you're working on so we can share it with the world!">
     <meta property="og:image" content="http://innovatesac.org/img/sutl-stories.jpg">
-    <meta property="og:url" content="https://innovatesac.org/stories/">
+    <meta property="og:url" content="https://innovatesac.org/stories">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Sacramento Urban Technology Lab">
     <meta name="twitter:image:alt" content="Share your #SUTL story">
