Fix redirect  meta tag

--- a/stories/index.html
+++ b/stories/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Share your #SUTL story">
     <meta property="og:description" content="The City of Sacramento wants to hear about what you're working on so we can share it with the world!">
     <meta property="og:image" content="http://innovatesac.org/img/sutl-stories.jpg">
-    <meta property="og:url" content="https://innovatesac.org/stories">
+    <meta property="og:url" content="https://innovatesac.org/stories/index.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Sacramento Urban Technology Lab">
     <meta name="twitter:image:alt" content="Share your #SUTL story">
